--- a/Bugs/Jupyter Notebook.ipynb
+++ b/Bugs/Jupyter Notebook.ipynb
@@ -47,13 +47,22 @@
     "  * conda install -c anaconda ipykernel\n",
     "  * python -m ipykernel install --user --name ex --display-name \"Python (ex)\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jupyterlab trying to use other env as kernel\n",
+    "\n",
+    "Leads to error that NumPy can't import c tools -- not sure what the issue is "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python (cs178)",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "cs178"
   },
   "language_info": {
    "codemirror_mode": {
@@ -65,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
