--- a/Food/recommendations.ipynb
+++ b/Food/recommendations.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Isabelle \n",
-    "\n",
     "## Tried\n",
     "\n",
     "#### Seoul Haus (2/7/2020)\n",
@@ -13,11 +11,10 @@
     "\n",
     "Spent $15.50 for Dinner\n",
     "\n",
-    "Went with Lam before big bonding night.\n",
     "Oxtail soup. AMAZING aroma, needed to add salt and pepper (do to taste for this soup it seems). Really liked the assosciated aroma that came along side with it. \n",
     "\n",
-    "She got cold noodles in vinegar?\n",
-    "I loved the rice (red bean mixed in? Was sooo GOOD).\n",
+    "Got cold noodles in vinegar?\n",
+    "I loved the rice (red bean mixed in?).\n",
     "The side dishes were great as usual -- fish cakes or pickled ( I think ) daikon radish in spicy sauce was a good time.\n",
     "\n",
     "#### Ha Long (1/22/2020)\n",
@@ -25,24 +22,20 @@
     "\n",
     "Spent $10?\n",
     "\n",
-    "Went with Issac as a hangout before he went to Taiwan\n",
     "Got combo bahn mi w/fried eggs, enjoyed it! Think if I go again, the choice is bbq pork/porkbelly\n",
     "\n",
     "#### Tang 190 (Korean soup Galbi jiim/soup)\n",
     "Would recommend\n",
     "\n",
-    "spent $22 for rice bowl (overtipped, but wtv should be 16, was amazing so I didn't mind)\n",
+    "spent $22 for rice bowl\n",
     "\n",
-    "Went with Rebekah\n",
-    "Amazing broth, great meal, and I think I would def try something else, but tasted greAT\n",
+    "Amazing broth, great meal, and I think I would def try something else, but tasted greAT  \n",
     "\n",
-    "Fukada (Japanesse)\n",
+    "#### Fukada (Japanesse)\n",
     "\n",
     "Would recommend\n",
     "\n",
     "Spent $22\n",
-    "\n",
-    "Went with Audrey as a catch up, got tanuki soba with unagi katsu, great flavour, i forgot how much I LOVE unagi\n",
     "\n",
     "## Still in the air\n",
     "\n",
@@ -111,9 +104,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
