--- a/Interview Prep/Patterns/DynamicProgramming.ipynb
+++ b/Interview Prep/Patterns/DynamicProgramming.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Dynamic Programming\n",
+    "## Identification\n",
+    "Minimizing/Maximizing with subprobleming. Essentially, you are trying to recurse over items with careful memorization. There is generally two approaches -- Top down, or Bottom Up. Personally, Top-Down feels more intuitive, but I will explain both underneath"
+   ]
   }
  ],
  "metadata": {
