--- a/InterviewPrep/2020/Leetcode650.ipynb
+++ b/InterviewPrep/2020/Leetcode650.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Leetcode 650\n",
+    "## Problem\n",
+    "Initially on a notepad only one character 'A' is present. You can perform two operations on this notepad for each step:\n",
+    "\n",
+    "Copy All: You can copy all the characters present on the notepad (partial copy is not allowed).\n",
+    "Paste: You can paste the characters which are copied last time.\n",
+    " \n",
+    "\n",
+    "Given a number n. You have to get exactly n 'A' on the notepad by performing the minimum number of steps permitted. Output the minimum number of steps to get n 'A'.\n",
+    "\n",
+    "## Thoughts\n",
+    "Typical DP problem -- Need to understand how to move in between states, and how to transfer to bottom up\n",
+    "\n",
+    "Currently, there is a top down\n",
+    "\n",
+    "## Analysis\n",
+    "Time :O(N) where n == passed N\n",
+    "Space: O(N) for all stack"
+   ]
   },
   {
    "cell_type": "code",
