--- a/InterviewPrep/2020/Leetcode209.ipynb
+++ b/InterviewPrep/2020/Leetcode209.ipynb
@@ -20,6 +20,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Solution(object):\n",
+    "    def minSubArrayLen(self, s, nums):\n",
+    "        \"\"\"\n",
+    "        :type s: int\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        acum = p1 = p2 = 0 \n",
+    "        res = float('inf')\n",
+    "        while p1 < len(nums):\n",
+    "            if acum >= s:\n",
+    "                res = min(res, p2-p1)\n",
+    "                acum -= nums[p1]\n",
+    "                p1 += 1\n",
+    "            elif p2 < len(nums):\n",
+    "                acum += nums[p2]\n",
+    "                p2 += 1\n",
+    "            else:\n",
+    "                p1 = len(nums)\n",
+    "        if res == float('inf'):\n",
+    "            return 0\n",
+    "        return res\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "160\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(\"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis partu (1/3)\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Solution:\n",
     "    def minSubArrayLen(self, s: int, nums: List[int]) -> int:\n",
     "        p_1, p_2 = 0, 0\n",
@@ -46,6 +94,13 @@
     "            return 0\n",
     "        return min_l"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
