--- a/InterviewPrep/2020/Leetcode179.ipynb
+++ b/InterviewPrep/2020/Leetcode179.ipynb
@@ -1,11 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Leetcode 179\n",
+    "## Problem\n",
+    "Given a list of non negative integers, arrange them such that they form the largest number.\n",
+    "\n",
+    "## Thoughts\n",
+    "This required some thinking, but with the idea that sorting with a custom comparitor (  int( a+b ) vs int(b+a) to determine largness as if a + b + c + ... > b + a + c + ... holding true for all positions, therefore if the largest 1st element is found and all subsequent items follow this (a is largest, then b is largest) the largest number is found)\n",
+    "\n",
+    "## Analysis\n",
+    "As this is a sorting algorithm, I used merge sort ( easiest for me to implement and solve for, with good parallelization properties ). Therefore  \n",
+    "Time : O(NlogN)\n",
+    "Space: O(N)"
+   ]
   },
   {
    "cell_type": "code",
