--- a/InterviewPrep/2020/Leetcode1590.ipynb
+++ b/InterviewPrep/2020/Leetcode1590.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Leetcode 1590\n",
+    "## Problem\n",
+    "Given an array of positive integers nums, remove the smallest subarray (possibly empty) such that the sum of the remaining elements is divisible by p. It is not allowed to remove the whole array.\n",
+    "\n",
+    "Return the length of the smallest subarray that you need to remove, or -1 if it's impossible.\n",
+    "\n",
+    "A subarray is defined as a contiguous block of elements in the array.\n",
+    "\n",
+    "## Thoughts\n",
+    "This is following the series of problems that is finding some subarray in a list. \n",
+    "\n",
+    "The idea is findingthe amount that would make it divisible (some smallest amount) by summing and finding the closest mod of p (which would become the subarray length + some multiple of p). Therefore, the item are % pd as stored, and then when a new item is found, try to find the last place where  the acum - toSearch was found as a mod P existed -- and find the min distance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
